# kate-3de-command

./: .gitignore  3decommand.json  CMakeLists.txt  Makefile  dictionary.h  plugin.cpp  update.sh
